--- a/.env.development.local
+++ b/.env.development.local
@@ -1,2 +1,8 @@
 # port
 PORT = 5500
+
+#environment
+NODE_ENV = 'development'
+
+#database
+DB_URI = 'mongodb+srv://api:api@cluster0.w1rzi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
