--- a/.env.development.local
+++ b/.env.development.local
@@ -6,3 +6,7 @@ NODE_ENV = 'development'
 
 #database
 DB_URI = 'mongodb+srv://api:api@cluster0.w1rzi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+
+# JWT AUTH
+JWT_SECRET = 'secret'
+JWT_EXPIRES_IN = '7d'
